--- a/index _copy.html
+++ b/index _copy.html
@@ -179,7 +179,7 @@
         .attr("width", width + margin.left + margin.right)
         .attr("height", height + margin.top + margin.bottom)
         .attr("class", "container")
-        .attr("style", "outline: 2px solid black; position: absolute; left: 50px; top: 50px;") 
+        .attr("style", "outline: 2px solid black; position: absolute; left: 0; top: 50px;") 
         .call(
         d3.zoom()
           .on("zoom", zoomed)
