--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     }
 
     .important-info {
-      position: absolute;
-      bottom: 40px;
+      position: relative;
+      top: 550px;
       font-family: arvo;
       width: 80%;
       left: 10%;
